--- a/templates/layouts/dashboard.html
+++ b/templates/layouts/dashboard.html
@@ -121,6 +121,9 @@
 <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/plugins/metisMenu/jquery.metisMenu.js') }}"></script>
 <script src="{{ url_for('static', filename='js/plugins/slimscroll/jquery.slimscroll.min.js') }}"></script>
+    
+<!-- Custom and plugin javascript -->
+<script src="{{ url_for('static', filename='js/inspinia.js') }}"></script>
 
 <script src="{{ url_for('static', filename='js/favico.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
