--- a/templates/receive.html
+++ b/templates/receive.html
@@ -9,7 +9,7 @@
     </div>
     <div class="ibox-content">
         <form action="{{ url_for('wallet_create') }}" method="post">
-            <button type="submit" class="btn btn-primary">Get new address</button>
+            <button class="btn btn-primary" type="submit"><i class="fa fa-plus" aria-hidden="true"></i> | Get new address</button>
         </form>
     </div>
 </div>
