--- a/templates/nvs.html
+++ b/templates/nvs.html
@@ -28,7 +28,7 @@
             <div class="hr-line-dashed"></div>
             <div class="form-group">
                 <div class="col-md-10 col-md-offset-2">
-                    <button type="submit" class="btn btn-primary">Create</button>
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> | Create</button>
                 </div>
             </div>
         </form>
