--- a/templates/sign.html
+++ b/templates/sign.html
@@ -22,7 +22,7 @@
             <div class="hr-line-dashed"></div>
             <div class="form-group">
                 <div class="col-md-10 col-md-offset-2">
-                    <button type="submit" class="btn btn-primary">Sign</button>
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> | Sign</button>
                 </div>
             </div>
         </form>
