--- a/templates/wallet.html
+++ b/templates/wallet.html
@@ -30,7 +30,7 @@
             <div class="hr-line-dashed"></div>
             <div class="form-group">
                 <div class="col-md-10 col-md-offset-2">
-                    <button type="submit" class="btn btn-primary">Transfer</button>
+                    <button class="btn btn-primary" type="submit"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> | Transfer</button>
                 </div>
             </div>
         </form>
